templates/subspace_template.yaml
---
# Source: subspace/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: release-name-subspace-web
  labels:
    helm.sh/chart: subspace-0.1.0
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
# Source: subspace/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: release-name-subspace
  labels:
    helm.sh/chart: subspace-0.1.0
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}
spec:
  selector:
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
  type: LoadBalancer
  externalTrafficPolicy: "Local"
  ports:
  - name: wireguard
    port: 51820
    protocol: UDP
    targetPort: wireguard
---
# Source: subspace/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-subspace"
  labels:
    helm.sh/chart: subspace-0.1.0
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: subspace
      app.kubernetes.io/name: subspace
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: subspace
        app.kubernetes.io/name: subspace
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: subspace
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          image: "subspacecommunity/subspace:1.5.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 51820
              name: wireguard
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            {}
      volumes:
        - name: data
          emptyDir: {}
---
# Source: subspace/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-subspace
  labels:
    helm.sh/chart: subspace-0.1.0
    app: subspace
    app.kubernetes.io/name: subspace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "www.example.com"
      http:
        paths:
          - path: /
            backend:
              service:
                name: release-name-subspace-web
                port:
                  name: http
            pathType: Prefix
